kubernetes/dev/store/medusajs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-backend
  namespace: store
spec:
  selector:
    app: medusa-backend
  ports:
  - port: 9000
