kubernetes/dev/store/medusajs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-ingress
  namespace: store
spec:
  rules:
  - host: medusa.dev.babybites.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medusa-backend
            port:
              number: 9000
